--- a/hosts-dev.ini
+++ b/hosts-dev.ini
@@ -1,11 +1,11 @@
 # hosts-dev
 
 [webservers]
-100.25.207.88
-54.167.88.168
+app1 ansible_host=100.25.207.88
+app2 ansible_host=54.167.88.168
 
 [loadbalancers]
-34.200.85.8
+lb1 ansible_host=34.200.85.8
 
 [local]
 control ansible_connection=local
