--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,7 @@
 
 [defaults]
 inventory = ./hosts-dev.ini
+remote_user = ec2-user
+private_key_file = ~/.ssh/ansible-course_key-pair.ppk
+host_key_checking = False
+
