--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,4 +5,4 @@ inventory = ./hosts-dev.ini
 remote_user = ec2-user
 private_key_file = ~/.ssh/ansible-course_key-pair.ppk
 host_key_checking = False
-
+interpreter_python=auto_silent
