--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,6 @@
 [defaults]
 inventory = ./hosts-dev.ini
 remote_user = ec2-user
-private_key_file = ~/.ssh/ansible-course_key-pair.ppk
+private_key_file = ~/.ssh/ansible-key.pem
 host_key_checking = False
-interpreter_python=auto_silent
+retry_files_enabled = False
