--- a/playbooks/setup-app.yml
+++ b/playbooks/setup-app.yml
@@ -18,3 +18,14 @@
           path: /var/www/html/index.php
           state: touch
           mode: 0755
+          
+      - name: Configure php.ini file
+        lineinfile:
+          path: /etc/php.ini
+          regexp: ^short_open_tag
+          line: 'short_open_tag=On'
+        notify: restart apache
+        
+    handlers:          
+      - name: restart apache
+        service: name=httpd state=restarted
